fixed header links spacing

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -59,5 +59,8 @@ nav {
             margin-left: 26px;
             cursor: pointer;
         }
+        .cart-display {
+            margin-left: 26px;
+        }
     }
 }
